--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Month/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Month/index.sass
@@ -85,6 +85,8 @@
         border-top: 1px solid lightgrey
     &__day:last-child 
         border-right: 0
+    &__day:hover
+        background-color:#f1f1f1
     &__header > div 
         text-transform: uppercase
         font-size: 0.8em
