--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Register/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Register/index.sass
@@ -1,5 +1,5 @@
 .register
-    padding: 4em
+    padding: 1em 4em
 
     &__title
         font-family: Helvetica, Roboto, sans-serif
@@ -17,7 +17,7 @@
         text-align: center
         margin-bottom: 3em
         border: none
-        padding: .25em
+        padding: .5em
     &__back-link
         text-decoration: none
         color: grey
