--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Couser-register/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Couser-register/index.sass
@@ -1,4 +1,4 @@
-.register
+.couserRegister
     padding: 1em 4em
 
     &__title
@@ -7,7 +7,7 @@
         text-align: center
     &__form-item
         list-style: none
-        margin: 1em
+        margin: 2em
     &__form-input
         padding: .5em
         width: 65%
@@ -18,15 +18,6 @@
         margin-bottom: 3em
         border: none
         padding: .5em
-    &__typeSelector
-        text-align: left
-        margin: 2em auto 1em auto
-        padding: .5em
-    &__otherOption
-        display: block
-        margin: auto
-        padding: .5em
-        width: 65%
     &__back-link
         text-decoration: none
         color: grey
