--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Week/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Week/index.sass
@@ -1,4 +1,4 @@
-.day
+.week
     margin: 0
     &__header
         margin: auto
@@ -24,7 +24,7 @@
         text-align: left
     &__list-title
         font-size: 2rem
-    &__item
+    &__list
         list-style: none
     &__toolbar
         display: flex
@@ -52,19 +52,30 @@
         font-size: .75rem
         padding: .75em
 
-.timetable
+.weekly
     margin: 1em 0 5em 0
     border: 1px solid lightgrey
     width: 100%
-    text-align: left
-    border-collapse: collapse
-    &__tr
-        border: 1px solid lightgrey
-    &__th
-        border: 1px solid lightgrey
-        padding: .75em
-        font-weight: normal
+
+    &__week, &__header 
+        display: grid
+        grid-template-columns: repeat(7, 1fr)
+    &__week
+        grid-auto-rows: 700px
+        text-align: right
+    &__header 
+        grid-auto-rows: 50px
+        align-items: center
+        text-align: center
+    &__day 
+        font-size: .75rem
         color: grey
-    &__td
-        padding: .75em
-        width: 90%
+        padding: 16px
+        border-right: 1px solid lightgrey
+        border-top: 1px solid lightgrey
+    &__day:last-child 
+        border-right: 0
+    &__header > div 
+        text-transform: uppercase
+        font-size: 0.8em
+        font-weight: bold
