--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/style/index.css
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/style/index.css
@@ -11,42 +11,16 @@ html {
   min-height: 100%;
 }
 
-body {
+#body {
   min-height: 100vh;
+}
+
+#root {
+  height: 100%;
 }
 
 .hidden {
   display: none;
-}
-
-.main {
-  padding: 4em;
-}
-.main__title {
-  display: none;
-}
-.main__subtitle {
-  text-align: center;
-  font-size: 1.2rem;
-  font-weight: normal;
-}
-.main__logo {
-  margin: 2em 0 2em 0;
-}
-.main__mobile-menu {
-  margin: 5em 0;
-}
-.main__item {
-  list-style: none;
-  margin: 1em auto;
-  padding: 1em;
-  width: 50%;
-  background-color: black;
-  text-align: center;
-}
-.main__link {
-  text-decoration: none;
-  color: white;
 }
 
 @media screen and (min-width: 840px) {
@@ -77,7 +51,6 @@ body {
   .header__main-link {
     text-decoration: none;
     color: black;
-    margin-left: -2em;
   }
   .header__secondary-link {
     text-decoration: none;
@@ -86,11 +59,39 @@ body {
   .header__main-link:hover, .header__secondary-link:hover {
     color: deeppink;
   }
+}
+.main__title {
+  display: none;
+}
+.main__subtitle {
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: normal;
+}
+.main__logo {
+  margin: 2em 0 2em 0;
+}
+.main__mobile-menu {
+  margin: 5em 0;
+}
+.main__item {
+  list-style: none;
+  margin: 1em auto;
+  padding: 1em;
+  width: 50%;
+  background-color: black;
+  text-align: center;
+}
+.main__link {
+  text-decoration: none;
+  color: white;
+}
 
+@media screen and (min-width: 840px) {
   .main {
+    min-height: calc(100vh - 80px - 260px);
     padding: 0 7em;
     text-align: center;
-    min-height: calc(100vh - 80px - 137px);
   }
   .main__e {
     font-weight: lighter;
@@ -109,39 +110,9 @@ body {
   .main__logo, .main__mobile-menu {
     display: none;
   }
-
-  .footer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 2em;
-  }
-  .footer__menu {
-    display: flex;
-  }
-  .footer__item {
-    list-style: none;
-    padding-right: 2em;
-    font-size: 0.75rem;
-  }
-  .footer__link {
-    text-decoration: none;
-    color: grey;
-    font-size: 0.75rem;
-  }
-  .footer__link:hover, .footer .fab:hover {
-    color: deeppink;
-  }
-
-  .fab {
-    text-decoration: none;
-    color: black;
-    font-size: 0.85rem;
-    margin: auto -2em auto 2em;
-  }
 }
 .register {
-  padding: 4em;
+  padding: 0 4em;
 }
 .register__title {
   font-family: Helvetica, Roboto, sans-serif;
@@ -184,7 +155,7 @@ body {
 }
 
 .login {
-  padding: 4em;
+  padding: 0 4em;
 }
 .login__title {
   font-family: Helvetica, Roboto, sans-serif;
@@ -559,97 +530,6 @@ body {
   color: red;
 }
 
-.day {
-  margin: 0;
-}
-.day__header {
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  width: 30%;
-}
-.day__title {
-  display: initial;
-  font-family: Helvetica, Roboto, sans-serif;
-  font-size: 2rem;
-}
-.day__month-year {
-  font-size: 1.2rem;
-  font-weight: normal;
-  margin-top: 1em;
-}
-.day__act {
-  display: flex;
-  padding: 0;
-}
-.day__activity {
-  display: flex;
-  flex-direction: column;
-  width: 20%;
-}
-.day__chores, .day__tags {
-  text-align: left;
-}
-.day__list-title {
-  font-size: 2rem;
-}
-.day__item {
-  list-style: none;
-}
-.day__toolbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 24px;
-}
-.day__toggle {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  text-align: center;
-  font-size: 0.9em;
-}
-.day__toggle-option {
-  border: 1px solid lightgrey;
-  border-radius: 0;
-  padding: 0.75em;
-  cursor: pointer;
-}
-.day__toggle-option:first-child {
-  border-right: none;
-}
-.day__toggle-option:last-child {
-  border-left: none;
-}
-.day__toggle-option--selected {
-  font-weight: bold;
-  color: deeppink;
-}
-.day__search-input {
-  font-size: 0.75rem;
-  padding: 0.75em;
-}
-
-.timetable {
-  margin: 1em 0 5em 0;
-  border: 1px solid lightgrey;
-  width: 100%;
-  text-align: left;
-  border-collapse: collapse;
-}
-.timetable__tr {
-  border: 1px solid lightgrey;
-}
-.timetable__th {
-  border: 1px solid lightgrey;
-  padding: 0.75em;
-  font-weight: normal;
-  color: grey;
-}
-.timetable__td {
-  padding: 0.75em;
-  width: 90%;
-}
-
 .week {
   margin: 0;
 }
@@ -754,6 +634,151 @@ body {
   font-weight: bold;
 }
 
+.day {
+  margin: 0;
+}
+.day__header {
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+}
+.day__title {
+  display: initial;
+  font-family: Helvetica, Roboto, sans-serif;
+  font-size: 2rem;
+}
+.day__month-year {
+  font-size: 1.2rem;
+  font-weight: normal;
+  margin-top: 1em;
+}
+.day__act {
+  display: flex;
+  padding: 0;
+}
+.day__activity {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+}
+.day__chores, .day__tags {
+  text-align: left;
+}
+.day__list-title {
+  font-size: 2rem;
+}
+.day__item {
+  list-style: none;
+}
+.day__toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 24px;
+}
+.day__toggle {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  font-size: 0.9em;
+}
+.day__toggle-option {
+  border: 1px solid lightgrey;
+  border-radius: 0;
+  padding: 0.75em;
+  cursor: pointer;
+}
+.day__toggle-option:first-child {
+  border-right: none;
+}
+.day__toggle-option:last-child {
+  border-left: none;
+}
+.day__toggle-option--selected {
+  font-weight: bold;
+  color: deeppink;
+}
+.day__search-input {
+  font-size: 0.75rem;
+  padding: 0.75em;
+}
+
+.timetable {
+  margin: 1em 0 5em 0;
+  border: 1px solid lightgrey;
+  width: 100%;
+  text-align-last: justify;
+  border-collapse: collapse;
+}
+.timetable__tr {
+  border: 1px solid lightgrey;
+}
+.timetable__th {
+  border: 1px solid lightgrey;
+  padding: 0.75em;
+  font-weight: normal;
+  color: grey;
+}
+.timetable__td {
+  padding: 0.75em;
+  width: 90%;
+}
+
+.fa-plus-circle {
+  background-color: white;
+  color: lightgrey;
+  border: none;
+  text-align: right;
+}
+
+.fa-plus-circle:hover {
+  color: black;
+}
+
+.register {
+  padding: 4em;
+}
+.register__title {
+  font-family: Helvetica, Roboto, sans-serif;
+  font-size: 2rem;
+  text-align: center;
+}
+.register__form-item {
+  list-style: none;
+  margin: 1em;
+}
+.register__form-input {
+  padding: 0.5em;
+  width: 65%;
+}
+.register__form-button {
+  background-color: black;
+  color: white;
+  text-align: center;
+  margin-bottom: 3em;
+  border: none;
+  padding: 0.5em;
+}
+.register__typeSelector {
+  text-align: left;
+  margin: 2em auto 1em auto;
+  padding: 0.5em;
+}
+.register__otherOption {
+  display: block;
+  margin: auto;
+  padding: 0.5em;
+  width: 65%;
+}
+.register__back-link {
+  text-decoration: none;
+  color: grey;
+}
+.register__back-link:hover {
+  color: deeppink;
+}
+
 .chores {
   margin: 0;
 }
@@ -772,13 +797,18 @@ body {
 .chores__list {
   list-style: none;
 }
+.chores__item {
+  display: flex;
+  justify-content: space-between;
+  width: 75%;
+}
 .chores__add {
+  margin-top: 0.5em;
   list-style: none;
   display: flex;
   flex-direction: row;
 }
 .chores__input {
-  margin-top: 0.5em;
   padding: 0.1em;
   font-size: 0.75rem;
   width: 90%;
@@ -791,8 +821,58 @@ body {
   padding: 0.1em;
 }
 
+.fa-trash-alt {
+  background-color: white;
+  color: lightgrey;
+  border: none;
+}
+
+.fa-trash-alt:hover {
+  color: grey;
+}
+
 .fa-plus:hover, .fa-search:hover {
   color: deeppink;
+}
+
+.hidden {
+  display: none;
+}
+
+@media screen and (min-width: 840px) {
+  .hidden {
+    display: initial;
+  }
+
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 2em;
+  }
+  .footer__menu {
+    display: flex;
+  }
+  .footer__item {
+    list-style: none;
+    padding-right: 2em;
+    font-size: 0.75rem;
+  }
+  .footer__link {
+    text-decoration: none;
+    color: grey;
+    font-size: 0.75rem;
+  }
+  .footer__link:hover, .footer .fab:hover {
+    color: deeppink;
+  }
+
+  .fab {
+    text-decoration: none;
+    color: black;
+    font-size: 0.85rem;
+    margin: auto -2em auto 2em;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
