update with fixed register co-user function

--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Day/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Day/index.sass
@@ -68,6 +68,13 @@
     &__td
         padding: .75em
         width: 90%
+        text-align: left
+    &__task-user
+        color: hotpink
+        text-align-last: left
+    &__task-name
+        color: grey
+        
 
 .fa-plus-circle
     background-color: white
