--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Month/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Month/index.sass
@@ -87,9 +87,14 @@
         border-right: 0
     &__day:hover
         background-color:#f1f1f1
+    &__tasks
+        display: flex
     &__header > div 
         text-transform: uppercase
         font-size: 0.8em
         font-weight: bold
-    &__disabled
-        color: red
+
+.fa-circle
+    padding: 2px
+    font-size: 13px
+    color: deeppink
