--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Week/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Week/index.sass
@@ -73,8 +73,19 @@
         padding: 16px
         border-right: 1px solid lightgrey
         border-top: 1px solid lightgrey
+    &__day:hover
+        background-color:#f1f1f1
     &__day:last-child 
         border-right: 0
+    &__tasks
+        margin-top: 1em
+        display: flex
+        flex-direction: column
+    &__task
+        display: flex
+    &__task-name
+        font-size: 13px
+        padding-left: 5px
     &__header > div 
         text-transform: uppercase
         font-size: 0.8em
