added some styles and components update

--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LineupCreate/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LineupCreate/index.sass
@@ -1,10 +1,5 @@
-ul 
-    width: 100%
-
-
-.players
+.item-players-lineup
     background-color: #394a6d
     width: 70%
     border: 1px solid white
-
     
