--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LineupUpdate/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LineupUpdate/index.sass
@@ -1,4 +1,4 @@
-.player-detail
+.player-lineup
     display: flex
     flex-direction: column
     margin: auto
@@ -7,7 +7,7 @@
   
     &__image
         justify-content: center
-        width: 85%
+        width: 70%
         margin: 5% auto
         border: 1px solid white
 
