--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/UserProfile/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/UserProfile/index.sass
@@ -1,8 +1,8 @@
-.card-players
-   
-    margin: auto
+.card
+
+    margin: 10% auto
     padding: 5px
-    width: 100%
+    width: 80%
    
 
     p
@@ -10,11 +10,8 @@
         color: white
         font-size: 20px
 
-    a 
-        font-size: 1px   
-
-    &__image
-        width: 90%
+   
+   
 
     &__content
         border: 0.5px solid white
@@ -23,10 +20,7 @@
         justify-content: center
         flex-direction: column
 
-        &__name
+        &__user
             padding-right: 0.5em
         &__surname
             padding-right: 0.5em
-        
-
-
