--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
@@ -1,15 +1,25 @@
 @import "reset"
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700)
 @import ../components/Landing
+@import ../components/Feedback
 @import ../components/Login
 @import ../components/Register
+@import ../components/MyLeagues
+@import ../components/Header
+@import ../components/MyTeam
 @import ../components/MyLineup
-@import ../components/PlayerResultLineup
+// @import ../components/PlayerResultLineup
+@import ../components/PlayerResult
+@import ../components/PlayerDetail
 @import ../components/InitialHeader
+@import ../components/LeagueTable
+@import ../components/UserProfile
+@import ../components/TeamCreate
+@import ../components/LineupUpdate
 
     
 body 
-    background-color: #216583
+    background-color: #394a6d
 h1
     color: white
     font-size: 30px
@@ -20,4 +30,16 @@ h2
     color: white
     font-size: 20px
     text-align: center
-    margin:  10%
+    margin:  5%
+
+a
+    color: black
+    text-decoration: none
+    background-color: white
+    font-size: 18px
+    display: block
+    padding: 3%
+    width: 25%
+    margin: 5px auto
+    text-align: center
+    
