--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Landing/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Landing/index.sass
@@ -1,18 +1,21 @@
+// .container
+//     width: 100vw
 
+ .header
+     width: 98%
+     
 .links
     display: flex
     flex-direction: column
     flex-wrap: nowrap
     
-
-a 
     color: black
     text-decoration: none
     background-color: white
-    font-size: 18px
+    font-size: 14px
     display: block
     padding: 3%
-    width: 25%
+    width: 20%
     margin: 5px auto
     text-align: center
    
