--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLineup/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLineup/index.sass
@@ -1,47 +1,55 @@
-//Container lineUp
+// .container
+//     display: grid
+//     grid-template-columns: auto auto auto auto
+//     padding: 10px
+//     border-radius: 10px
+//     grid-gap: 25px 10px
+//     width: 100%
 
-.container
-    display: grid
-    grid-template-columns: auto auto auto auto
-    background-color: #00818a
-    padding: 10px
-    border-radius: 10px
-    grid-gap: 25px 10px
+
+
+// .item
+
+//     background-color: #293462
+//     border: 1px solid #fff
+//     font-size: 20px
+//     text-align: center
+//     width: 75%
+
     
 
-.item
-
-    background-color: #293462
-    border: 1px solid #fff
-    padding: 20px
-    font-size: 20px
-    text-align: center
-
-.item0
+// .item0
     
-    margin: 0 auto
-    grid-column-start: 1
-    grid-column-end: 5
+//     margin: 0 auto
+//     grid-column-start: 1
+//     grid-column-end: 5
    
-.item9
+// .item9
    
-    margin: 0 auto
-    grid-column-start: 1
-    grid-column-end: 3
+//     margin: 0 auto
+//     grid-column-start: 1
+//     grid-column-end: 3
 
-.item10
+// .item10
 
     
-    margin: 0 auto
-    grid-column-start: 3
-    grid-column-end: 5
+//     margin: 0 auto
+//     grid-column-start: 3
+//     grid-column-end: 5
 
-button
-    color: black
-    background-color: white
-    font-size: 16px
-    display: block
-    padding: 5px
-    width: 30%
-    margin: 10px auto
-    text-align: center 
+// button
+//     color: black
+//     background-color: white
+//     font-size: 16px
+//     display: block
+//     padding: 5px
+//     width: 30%
+//     margin: 10px auto
+//     text-align: center 
+
+    
+.item-players
+    background-color: #394a6d
+    width: 70%
+    border: 1px solid white
+    
