--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerResultLineup/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerResultLineup/index.sass
@@ -1,15 +1,47 @@
 
-.card
-   &__image
-        width: 95%
-        height: 95%
-//     &_content
-
-//         &_name
+// .card
+  
+//    &__content
         
-//         &_surname
-    
-img 
+//         &__name
+//             font-size: 14px
+//         &__surname
+//             font-size: 14px
+//         &__points
+//             font-size: 14px
+       
+// .image
+//     width: 100%
+
+.card
+   
+    margin: auto
+    padding: 5px
     width: 100%
-    height: 100%
-    
+   
+
+    p
+        text-align: center
+        color: white
+        font-size: 20px
+
+    a 
+        font-size: 1px   
+
+    &__image
+        width: 90%
+
+    &__content
+        border: 0.5px solid white
+        padding: 0.5em
+        display: flex
+        justify-content: center
+        flex-direction: column
+
+        &__name
+            padding-right: 0.5em
+        &__surname
+            padding-right: 0.5em
+        &__points    
+            padding-right: 0.5em
+        
