--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.css
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.css
@@ -56,17 +56,19 @@ table {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-}
-
-a {
   color: black;
   text-decoration: none;
   background-color: white;
-  font-size: 18px;
+  font-size: 14px;
   display: block;
   padding: 3%;
-  width: 25%;
+  width: 20%;
   margin: 5px auto;
+  text-align: center;
+}
+
+.feedback__text {
+  color: red;
   text-align: center;
 }
 
@@ -74,16 +76,13 @@ a {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-}
-
-a {
   color: black;
   text-decoration: none;
   background-color: white;
-  font-size: 18px;
+  font-size: 14px;
   display: block;
   padding: 3%;
-  width: 25%;
+  width: 20%;
   margin: 5px auto;
   text-align: center;
 }
@@ -111,9 +110,6 @@ input {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-}
-
-a {
   color: black;
   text-decoration: none;
   background-color: white;
@@ -144,60 +140,9 @@ input {
   margin: 2%;
 }
 
-.container {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  background-color: #00818a;
-  padding: 10px;
-  border-radius: 10px;
-  grid-gap: 25px 10px;
-}
-
-.item {
-  background-color: #293462;
-  border: 1px solid #fff;
-  padding: 20px;
-  font-size: 20px;
+.league__name {
   text-align: center;
-}
-
-.item0 {
   margin: 0 auto;
-  grid-column-start: 1;
-  grid-column-end: 5;
-}
-
-.item9 {
-  margin: 0 auto;
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
-
-.item10 {
-  margin: 0 auto;
-  grid-column-start: 3;
-  grid-column-end: 5;
-}
-
-button {
-  color: black;
-  background-color: white;
-  font-size: 16px;
-  display: block;
-  padding: 5px;
-  width: 30%;
-  margin: 10px auto;
-  text-align: center;
-}
-
-.card__image {
-  width: 95%;
-  height: 95%;
-}
-
-img {
-  width: 100%;
-  height: 100%;
 }
 
 .header-app {
@@ -211,8 +156,309 @@ img {
   padding: 10%;
 }
 
+.header {
+  display: flex;
+  padding: 5%;
+}
+
+a {
+  text-decoration: none;
+  color: #232323;
+  transition: color 0.3s ease;
+}
+
+a:hover {
+  color: blue;
+}
+
+#menuToggle {
+  display: block;
+  position: relative;
+  top: 20px;
+  left: 5%;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+  -webkit-touch-callout: none;
+}
+
+/* * Just a quick hamburger
+ * */
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #cdcdcd;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  transition-background: 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  transition-opacity: 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+/* * Transform all the slices of hamburger
+ * * into a crossmark.
+ * */
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #537d91;
+}
+
+/* * But let's hide the middle one.
+ * */
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/* * Ohyeah and the last one should go the other direction
+ * */
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/* * Make this absolute positioned
+ * * at the top left of the screen
+ * */
+.menu {
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+.menu__profile {
+  margin: 0;
+}
+.menu__logout {
+  margin: 0;
+}
+
+.menu li {
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/* * And let's slide it in from the left
+ * */
+#menuToggle input:checked ~ ul {
+  transform: none;
+}
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.title__name {
+  text-align: center;
+}
+
+.low-menu {
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+ul {
+  width: 100%;
+}
+
+.players {
+  background-color: #394a6d;
+  width: 70%;
+  border: 1px solid white;
+}
+
+.item-players {
+  background-color: #394a6d;
+  width: 70%;
+  border: 1px solid white;
+}
+
+.card-players {
+  margin: auto;
+  padding: 5px;
+  width: 100%;
+}
+.card-players p {
+  text-align: center;
+  color: white;
+  font-size: 20px;
+}
+.card-players a {
+  font-size: 1px;
+}
+.card-players__image {
+  width: 90%;
+}
+.card-players__content {
+  border: 0.5px solid white;
+  padding: 0.5em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.card-players__content__name {
+  padding-right: 0.5em;
+}
+.card-players__content__surname {
+  padding-right: 0.5em;
+}
+
+.player-detail {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 100%;
+}
+.player-detail__image {
+  justify-content: center;
+  width: 85%;
+  margin: 5% auto;
+  border: 1px solid white;
+}
+.player-detail__content {
+  display: flex;
+  flex-direction: column;
+  border: 0.5px solid white;
+  padding: 0.5em;
+  display: flex;
+  justify-content: center;
+  margin: 2% auto;
+}
+
+p {
+  text-align: center;
+  color: white;
+  font-size: 20px;
+}
+
+.header-app {
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+  font-size: 25px;
+}
+
+.header-access {
+  padding: 10%;
+}
+
+.clasification {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: auto;
+  width: 50%;
+  border: 1px solid #45454d;
+  padding: 5px;
+}
+.clasification__list {
+  margin: 10%;
+  background-color: #45454d;
+}
+.clasification__table {
+  background-color: #45454d;
+  width: 40%;
+}
+
+.card {
+  margin: 10% auto;
+  padding: 5px;
+  width: 80%;
+}
+.card p {
+  text-align: center;
+  color: white;
+  font-size: 20px;
+}
+.card__content {
+  border: 0.5px solid white;
+  padding: 0.5em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.card__content__user {
+  padding-right: 0.5em;
+}
+.card__content__surname {
+  padding-right: 0.5em;
+}
+
+.players-create {
+  background-color: #394a6d;
+  width: 90%;
+  margin: 0 5%;
+}
+
+li {
+  list-style: none;
+}
+
+.player-lineup {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 100%;
+}
+.player-lineup__image {
+  justify-content: center;
+  width: 70%;
+  margin: 5% auto;
+  border: 1px solid white;
+}
+.player-lineup__content {
+  display: flex;
+  flex-direction: column;
+  border: 0.5px solid white;
+  padding: 0.5em;
+  display: flex;
+  justify-content: center;
+  margin: 2% auto;
+}
+
+p {
+  text-align: center;
+  color: white;
+  font-size: 20px;
+}
+
 body {
-  background-color: #216583;
+  background-color: #394a6d;
 }
 
 h1 {
@@ -226,7 +472,19 @@ h2 {
   color: white;
   font-size: 20px;
   text-align: center;
-  margin: 10%;
+  margin: 5%;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  background-color: white;
+  font-size: 18px;
+  display: block;
+  padding: 3%;
+  width: 25%;
+  margin: 5px auto;
+  text-align: center;
 }
 
 /*# sourceMappingURL=index.css.map */
