update app with improved calendar presentation

--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Day/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Day/index.sass
@@ -69,18 +69,35 @@
         padding: .75em
         width: 90%
         text-align: left
+    &__task-intro
+        display: flex
+        align-items: center
     &__task-user
         color: hotpink
-        text-align-last: left
+        margin-right: .25em
     &__task-name
         color: grey
+        margin-right: .25em
+    &__task-description
+        text-align-last: left
+        margin: .25em 0 1em 0
+        
         
 
 .fa-plus-circle
     background-color: white
     color: lightgrey
     border: none
-    text-align: right
+    padding: 0
 
 .fa-plus-circle:hover
     color: black
+
+.fa-minus-circle
+    background-color: white
+    color: lightgrey
+    margin-left: .5em
+    border: none
+
+.fa-minus-circle:hover
+    color: grey
