--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Month/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Month/index.sass
@@ -77,7 +77,7 @@
         grid-auto-rows: 50px
         align-items: center
         text-align: center
-    &__day 
+    &__day, &__selected, &__disabled
         font-size: .75rem
         color: grey
         padding: 16px
@@ -93,6 +93,10 @@
         text-transform: uppercase
         font-size: 0.8em
         font-weight: bold
+    &__selected
+        background-color: #fff3f6
+    &__disabled
+        background-color: #f1f1f1
 
 .fa-circle
     padding: 2px
