added some styles and components update

--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LineupCreate/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/LineupCreate/index.sass
@@ -1,5 +1,8 @@
 .item-players-lineup
+
     background-color: #394a6d
     width: 70%
-    border: 1px solid white
+    margin: 0 5%
     
+li
+    list-style: none
