--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLeagues/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLeagues/index.sass
@@ -1,14 +1,5 @@
 .league
 
-    &__name
-        text-align: center
-        margin: 0 auto
-
-.header-app
-    background-color: white
-    padding: 10px
-    text-align: center
-    font-size: 25px
-
-.header-access
-    padding: 10%
+    width: 80%
+    margin: 20% auto
+    border: 1px solid white
