--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Header/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Header/index.sass
@@ -1,156 +1,77 @@
-
-  
 .header
   display: flex
-  
   padding: 5%
-a
+  justify-content: space-between
+
+/* Navbar container */
+.navbar 
+  overflow: hidden
+  background-color: #394a6d
   
+
+
+/* Links inside the navbar */
+.navbar a 
+  float: left
+  font-size: 16px
+  color: white
+  text-align: center
+  padding: 14px 16px
   text-decoration: none
-  color: #232323
-
-  transition: color 0.3s ease
 
 
-a:hover
-
-  color: blue
-
-
-
-#menuToggle
-
-  display: block
-  position: relative
-  top: 20px
-  left: 5%
-  
-  z-index: 1
-  
-  -webkit-user-select: none
-  user-select: none
+/* The dropdown container */
+.dropdown 
+  float: left
+  overflow: hidden
 
 
-#menuToggle input
+/* Dropdown button */
+.dropdown .dropbtn 
+  font-size: 16px
+  border: none
+  outline: none
+  color: white
+  padding: 14px 16px
+  background-color: inherit
+  font-family: 'Monda', sans-serif
+  margin: 0 
 
-  display: block
-  width: 40px
-  height: 32px
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn 
+  background-color: #394a6d
+
+
+/* Dropdown content (hidden by default) */
+.dropdown-content 
+  display: none
   position: absolute
-  top: -7px
-  left: -5px
-  
-  cursor: pointer
-  
-  opacity: 0 
-  z-index: 2 
-  
-  -webkit-touch-callout: none
-
-
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-
-  display: block
-  width: 33px
-  height: 4px
-  margin-bottom: 5px
-  position: relative
-  
-  background: #cdcdcd
-  border-radius: 3px
-  
+  // background-color: #394a6d
+  background-color: white
+  min-width: 160px
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2)
   z-index: 1
-  
-  transform-origin: 4px 0px
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background: 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity: 0.55s ease
 
 
-#menuToggle span:first-child
-
-  transform-origin: 0% 0%
-
-
-#menuToggle span:nth-last-child(2)
-
-  transform-origin: 0% 100%
-
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
-
-  opacity: 1
-  transform: rotate(45deg) translate(-2px, -1px)
-  background: #537d91
+/* Links inside the dropdown */
+.dropdown-content a 
+  float: none
+  color: black
+  padding: 12px 16px
+  text-decoration: none
+  display: block
+  text-align: left
 
 
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-
-  opacity: 0
-  transform: rotate(0deg) scale(0.2, 0.2)
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover 
+  background-color: #ddd
 
 
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-
-  transform: rotate(-45deg) translate(0, -1px)
-
-
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
-.menu
-
-  position: absolute
-  width: 300px
-  margin: -100px 0 0 -50px
-  padding: 50px
-  padding-top: 125px
-  
-  background: #ededed
-  list-style-type: none
-  -webkit-font-smoothing: antialiased
-  /* to stop flickering of text in safari */
-  
-  transform-origin: 0% 0%
-  transform: translate(-100%, 0)
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
-
-  &__profile
-    margin: 0
-
-  &__logout
-    margin: 0
-
-.menu li
-
-  padding: 10px 0
-  font-size: 22px
-
-
-
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked ~ ul
-
-  transform: none
-
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content 
+  display: block
 
 .title
   display: flex
@@ -171,4 +92,13 @@ a:hover
   align-items: center
 
  
+
+.code
+  color: black
+  font-size: 16px
+  text-align: left
+
+.title
+  &__user
+    font-size: 14px
 
