--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/InitialHeader/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/InitialHeader/index.sass
@@ -1,12 +1,9 @@
 
 //Header principal main app
 
-.header-app
-    background-color: white
-    padding: 10px
+.initial-header
+ 
     text-align: center
     font-size: 25px
-
-.header-access
-    padding: 10%
+    border: 1px solid white
 
