--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Landing/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Landing/index.sass
@@ -8,7 +8,6 @@
     display: flex
     flex-direction: column
     flex-wrap: nowrap
-    
     color: black
     text-decoration: none
     background-color: white
@@ -18,4 +17,9 @@
     width: 20%
     margin: 5px auto
     text-align: center
-   
+
+.landing
+    width: 80%
+    padding: 20px
+    margin: 20% auto
+    border: 1px solid white
