--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerResultInitial/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerResultInitial/index.sass
@@ -1,25 +1,10 @@
-
-// .card
-  
-//    &__content
-        
-//         &__name
-//             font-size: 14px
-//         &__surname
-//             font-size: 14px
-//         &__points
-//             font-size: 14px
-       
-// .image
-//     width: 100%
-
-.card
+.card-initial
    
-    margin: auto
+    margin: 15%
     padding: 5px
     width: 100%
-   
-
+    
+  
     p
         text-align: center
         color: white
@@ -29,7 +14,11 @@
         font-size: 1px   
 
     &__image
-        width: 90%
+        width: 100%
+        &--img 
+            object-fit: cover
+            width: 100%
+            height: 100%
 
     &__content
         border: 0.5px solid white
@@ -45,3 +34,4 @@
         &__points    
             padding-right: 0.5em
         
+
