--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Register-success/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Register-success/index.sass
@@ -1,7 +1,8 @@
 .register-successful
+
+    width: 80%
     margin: 20%
     text-align: center
-
-    a
-        margin-top: 5%
-
+    border: 1px solid white
+    margin: 20% auto
+    
