--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
@@ -8,7 +8,7 @@
 @import ../components/Header
 @import ../components/MyTeam
 @import ../components/MyLineup
-// @import ../components/PlayerResultLineup
+@import ../components/PlayerResultInitial
 @import ../components/PlayerResult
 @import ../components/PlayerDetail
 @import ../components/InitialHeader
@@ -25,21 +25,26 @@ h1
     font-size: 30px
     text-align: center
     margin:  5%
+    font-family: 'Monda', sans-serif
 
 h2 
     color: white
     font-size: 20px
     text-align: center
     margin:  5%
+    font-family: 'Monda', sans-serif
 
 a
     color: black
     text-decoration: none
-    background-color: white
     font-size: 18px
     display: block
     padding: 3%
-    width: 25%
     margin: 5px auto
     text-align: center
+    font-family: 'Monda', sans-serif
     
+p 
+
+    font-family: 'Monda', sans-serif
+
