--- a/staff/albert-fuente/skyshop/skyshop-app/src/components/App/index.sass
+++ b/staff/albert-fuente/skyshop/skyshop-app/src/components/App/index.sass
@@ -1,3 +1,4 @@
+  
 *
   margin: 0
   padding: 0
@@ -17,83 +18,6 @@
   color: #555555
   background-image: url("https://image.freepik.com/vector-gratis/diseno-fondo-mapa-mundo_1127-2318.jpg")
 
-.ul 
-  list-style-type: none
-  display: flex
-
-
-.li 
-  font-size: 0.8em
-  margin-right: 0.2rem
-  background-color: rgba(241, 239, 235, 0.2)
-  width: 5rem
-  align-self: center
-  padding: 0.3rem
-  text-align: center
-
-.li--small
-  font-size: 0.8em
-  margin-right: 0.2rem
-  background-color: rgba(241, 239, 235, 0.2)
-  width: 1.5rem
-  align-self: center
-  padding: 0.3rem
-  text-align: center
-
-.li--small--cart
-  font-size: 0.8em
-  margin-right: 0.2rem
-  background-color: rgba(241, 239, 235, 0.2)
-  width: 1.5rem
-  align-self: center
-  padding: 0.3rem
-  text-align: center
-  color: white
-  text-decoration: none
-
-
-
-.fa-cart-plus
-  color: #333
-
-.green
-  color: green
-
-
-.li--title
-  font-size: 0.8em
-  margin-right: 7.5rem
-  width: 1.5rem
-  align-self: center
-  padding: 0.3rem
-  text-align: center
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-
-
-.nav-but 
-  text-decoration: none
-  color:#333
-  
-
-
 .button 
   width: 40vw
   height: 6vh
@@ -102,7 +26,6 @@
   border: 0.05rem solid #b4b4b4
   border-radius: 0.3rem
   text-align: center
-
 
 .button:active 
   background-color: #c8c8c8
@@ -132,36 +55,23 @@
   border-radius: 0.4rem
   text-align: center
 
-
 .art-but 
   text-decoration: none
   color: black
 
-.detail 
-  width: 95vw
-  margin: 1rem auto 2rem auto
-  padding: 0.8rem
-  background-color: rgba(255, 255, 255, 0.5)
-  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.1)
-  border-radius: 0.3rem
-  text-decoration: none
-  list-style: none
+.detail__data 
+  font-size: 0.6rem
 
-.detail__img 
-  width: 90vw
-  margin-top: 1rem
+.detail__description 
+  font-size: 0.8rem
+  margin: 1rem 0
+  
+.detail-owner
+  margin-top: 0.2rem
+  font-weight: bold
 
-  .detail__data 
-    font-size: 0.6rem
-  
-  .detail__description 
-    font-size: 0.8rem
-    margin: 1rem 0
-  
-  
   .main 
     width: 100vw
-
 
 .compo-nav 
   width: 100%
@@ -171,7 +81,6 @@
   display: flex
   justify-content: space-between
   align-items: center
-  
   
 .form-section 
   width: 90vw
@@ -186,10 +95,8 @@
   flex-direction: column
   align-items: center
 
-
 .form 
   margin-top: 2rem
-
 
 input 
   width: 100%
@@ -198,11 +105,7 @@ input
   border-radius: 0.3rem
   border: 0.05rem solid #b4b4b4
   padding: 2px
-  
-  
-  
-
-    
+   
   .nav__hello 
     margin: auto 6rem auto 0
     color: white
@@ -328,25 +231,6 @@ input
     background-color: #c8c8c8
     color: white
   
-
-
-  
-  
- 
-  
-  
-
-
-
-
-
-
-
-
-
-
-
-
   .nav-logo 
     width: 70vw
     margin: 2rem auto
@@ -386,12 +270,10 @@ input
     display: grid
     grid-template-areas: 'w' 'x' 'z' 'y'
 
-
   .backProduct
     margin-left: 1rem
     border: none
     margin-top: 1rem
-
 
   .size
     display: flex
@@ -439,79 +321,9 @@ input
     color: #ffffff
     font-weight: bold
 
-//TOP NAV
-.nav 
-    width: 100vw
-    padding: 0.5rem
-    height: 2.5rem
-    background-color: #FBF6F3 
-    display: flex
-    justify-content: flex-end
-    text-align: center
-
-//SECOND NAV
-.nav2-ul
-  list-style-type: none
-  display: flex
-
-.nav2-but 
-  text-decoration: none
-  color: white
-  font-size: 0.8em
-  margin-right: 8.5rem
-  background-color: rgba(241, 239, 235, 0.3)
-  width: 5rem
-  align-self: center
-  padding: 0.3rem
-  padding-left: 1rem
-  padding-right: 1rem
-  text-align: center
-
-.nav2-but--small
-  text-decoration: none
-  color: white
-  font-size: 0.8em
-  margin-right: 0.1rem
-  background-color: rgba(241, 239, 235, 0.3)
-  width: 2rem
-  align-self: center
-  padding: 0.3rem
-  padding-left: 0.5rem
-  padding-right: 0.5rem
-  margin-left: 2rem
-  text-align: center
-
-.nav2 
-  width: 100vw
-  padding: 0.5rem
-  height: 2.5rem
-  background-color: #009EE2
-  display: flex
-  justify-content: flex-end
-  text-align: center
-
-//REGISTER && LOGIN PANEL
-.formPanel
-  margin: 2rem
-  text-align: center
-
-.formPanel-form
-  margin: 2rem
-  color: #333
-
 input
   border: 2px solid #009EE2
-  border-radius: 30px
-label
-  color:#333
-
-.backArrow
-  margin-top: 1.5rem
-  color: #333
-
-.userCart-backArrow
-  margin: 1rem
-  color: #333
+  border-radius: 30px 
 
 .userCart-total
   color: #333
@@ -520,16 +332,6 @@ label
 .userCart-hidden
   display: none
   
-
-.formPanel-submit
-  margin-top: 1rem
-  padding: 0.5rem
-  background-color: #18A558
-  color: #fff
-  font-size: 1rem
-  padding-left: 2rem
-  padding-right: 2rem
-  border: none
 
 .formPanel-submit-execute
   margin-top: 1rem
@@ -542,17 +344,6 @@ label
   padding-right: 2rem
   border: none
 
-.formPanel-submit-explore
-  margin-top: 1rem
-  margin-left: 30%
-  padding: 0.5rem
-  background-color: #49B6E5
-  color: #fff
-  font-size: 1rem
-  padding-left: 2rem
-  padding-right: 2rem
-  border: none
-  text-decoration: none
 
 .formPanel-submit-buy
   margin-top: 1rem
@@ -587,8 +378,6 @@ label
   text-align: center
   margin: 2rem
 
-
-//ADVANCED SEARCH 
 .select
   padding: 0.2rem
   padding-left: 2rem
@@ -604,71 +393,6 @@ label
   border: 2px solid #009EE2
   border-radius: 30px
 
-
-.product-picture
-  font-size: 0.8em
-  margin-right: 0.2rem
-  max-width: 0.1%
-  max-height: 0.1%
-  grid-area: x
-
-img
-  width: 100%
-  border-radius: 7%
-
-.product-image
-  grid-area: x
-
-.product-price
-  font-size: 1rem
-  padding: 1rem
-  margin-left: 2.5rem
-  grid-area: z
-
-.product-description
-  margin-top: 1rem
-  margin-left: 2.5rem
-  font-weight: bold
-  grid-area: y
-
-.product
-  margin: 1.5rem
-  border-bottom: 0.05rem solid grey
-  padding-top: 0.75rem
-  padding-bottom: 0.75rem
-  text-decoration: none
-  list-style: none
-  display: grid
-  grid-template-areas: "x x" "y z"
-
-
-//SPINNER
-.spinner:before
-  content: ""
-  box-sizing: border-box
-  position: absolute
-  top: 70%
-  left: 50%
-  height: 80px
-  width: 80px
-  margin-top: -30px
-  margin-left: -30px
-  border-radius: 50%
-  border-top: 10px solid #009ee2
-  border-right: 7px solid transparent
-  background-image: url("logo-bco.png")
-  animation: spinner 0.4s linear infinite
-
-@keyframes spinner
-  to
-    transform: rotate(360deg)
-.container
-  background-color: black
-  width: 55vh
-  height: 90vh
-
-//ORDERS
-
 .orders
   margin: 2%
   border: 1px solid black
@@ -681,50 +405,6 @@ img
   color: #fff
   background-color: #18A558
 
-//FEEDBACK
-.feedback__text
-  color: red
-  text-align: center
-  font-weight: bold
-
-.nav-title
-  padding-right: 80%
-  font-weight: bold
-  font-size: 1.2rem
-  font-family: 'Fugaz One', cursive
-  color: #009ee2
-
-
-
-
-.detail-counter
-  display: flex
-  margin: 1rem
-
-.detail-operator
-  padding: 0.4rem
-  padding-left: 1rem
-  padding-right: 1rem
-  border: none
-  background-color: #333
-  font-weight: bold
-  color: #fff
-
-.detail-result
-  padding: 0.4rem
-  padding-left: 1rem
-  padding-right: 1rem
-  background-color: #333
-  font-weight: bold
-  color: #fff
-
-.backFromDetail
-  margin-top: 1rem
-  margin: 2rem
-  color: #333
-
-.detail-add-cart-container
-  margin-left: 30%
 
 .userCart
   background-color: #f7f7f7
@@ -744,20 +424,10 @@ img
 
 .userCart-description
   
-
 .fa-times-circle
   margin-buttom: 1rem
   margin-left: 100%
   color: #BD2031
-
-
-.select-filter
-  width: 40vw
-  height: 6vh
-  margin: 1rem auto
-  display: flex
-  background-color: white
-  border: 2px solid #009ee2
 
 .productAvailable
   background-color: #333
