added more styles

--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/CreateLeagues/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/CreateLeagues/index.sass
@@ -1,11 +1,13 @@
 .form-create
     
     text-align: center
+    
 
     &__inputs
         display: flex
         flex-direction: column
         flex-wrap: nowrap
+  
 
 label
     font-size: 18px
@@ -16,5 +18,8 @@ input
 
 .create
     width: 80%
-    margin: 0 auto
+    margin: 10% auto
     border: 1px solid white
+    &__title
+        margin-bottom: 0
+  
