--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Feedback/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Feedback/index.sass
@@ -1,3 +1,7 @@
 .feedback__text
-    color: red
+    color: #F77754
     text-align: center
+    width: 80%
+    margin: 5% auto
+    padding: 5%
+    border: 1px solid white
