--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLeagues/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLeagues/index.sass
@@ -1,5 +1,12 @@
 .league
 
     width: 80%
-    margin: 20% auto
+    margin: 10% auto
     border: 1px solid white
+
+    &__name
+        margin: 5%
+
+.league-title
+    text-align: center
+   
