--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
@@ -5,6 +5,7 @@
 @import ../components/Login
 @import ../components/Register
 @import ../components/MyLeagues
+@import ../components/CreateLeagues
 @import ../components/Header
 @import ../components/MyTeam
 @import ../components/MyLineup
@@ -15,6 +16,7 @@
 @import ../components/LeagueTable
 @import ../components/UserProfile
 @import ../components/TeamCreate
+@import ../components/LineupCreate
 @import ../components/LineupUpdate
 
     
@@ -48,3 +50,14 @@ p
 
     font-family: 'Monda', sans-serif
 
+button
+    margin: 5%
+    font-family: 'Monda', sans-serif
+    font-size: 14px
+    background-color: white
+    border-radius: 8px
+
+    button:hover 
+        background-color: white
+        color: #D7D9DA
+        font-weight: bold
