--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerResultInitial/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/PlayerResultInitial/index.sass
@@ -1,7 +1,6 @@
 .card-initial
    
     margin: 15%
-    padding: 5px
     width: 100%
     
   
@@ -14,14 +13,15 @@
         font-size: 1px   
 
     &__image
-        width: 100%
-        &--img 
-            object-fit: cover
-            width: 100%
-            height: 100%
+        width: 90%
+        // &--img 
+        //     object-fit: cover
+        //     width: 100%
+        //     height: 100%
 
     &__content
         border: 0.5px solid white
+        width: 85%
         padding: 0.5em
         display: flex
         justify-content: center
