almost defined react app :)

--- a/staff/juan-bovo/vltra/vltra-app/src/components/App/style.sass
+++ b/staff/juan-bovo/vltra/vltra-app/src/components/App/style.sass
@@ -10,5 +10,5 @@
 //   background: linear-gradient(to right, red, purple)
 
 body
-  border: 1px solid black
-  margin-bottom: 6.5%
+  //border: 1px solid black
+  margin-bottom: 12%
