--- a/staff/juan-bovo/vltra/vltra-app/src/components/Header/style.sass
+++ b/staff/juan-bovo/vltra/vltra-app/src/components/Header/style.sass
@@ -1,16 +1,18 @@
 .header 
-  width: 90%
-  height: 33vh
+  width: 100%
+  height: 33%
   margin: 0 auto
-  border: 5px solid black
+  // border: 5px solid black
 
 nav
   height: 100%
-.user-menu 
+
+.user-menu
+  //background-image: url("../../style/vltra-barradas-1.png")
   margin: auto 0
   padding: 0
   height: 100%
-  width: 33%
+  width: 30%
   float: right
   list-style: none
   overflow: hidden
@@ -20,7 +22,7 @@ nav
   display: block
   padding: 5% 0
   text-decoration: none
-  border: 1px solid lightgray
+  border: 1px solid rgb(22,22,22)
   color: rgb(60, 60, 60)
   text-align: center
 
@@ -33,12 +35,18 @@ nav
   background-color: rgba(180, 180, 180, 0.4)
 
 .header__logo, .user-menu
-  border: 5px solid black
+  margin-top: 10px
 
 .header .header__logo 
   display: block
   float: left
   text-decoration: none
+
+.header__logo
+  width: 60%
+
+.header__logo--image
+  width: 100%
 
 .user-menu__avatar-container
   width: 100%
@@ -52,6 +60,9 @@ nav
 
 
 @media (min-width: 48em)
+  .header
+    width: 90%
+  
   .user-menu__auth-option-link
     //padding: 20px 30px
 
@@ -62,3 +73,6 @@ nav
 
   .header .hamburguer-menu__icon
     display: none
+
+  .header__logo
+    width: 40%
