update app with renamed component folders and updated testing

--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/App/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/App/index.sass
@@ -19,15 +19,15 @@ body
 @import ../Header/
 @import ../Landing/
 @import ../Register/
-@import ../Register-success/
+@import ../RegisterSuccess/
 @import ../Login/
 @import ../Home/
 @import ../Space/
-@import ../Space-register/
-@import ../Couser-register/
+@import ../SpaceRegister/
+@import ../CouserRegister/
 @import ../Month/
 @import ../Week/
 @import ../Day/
-@import ../Task-register/
+@import ../TaskRegister/
 @import ../Chores/
 @import ../Footer/
